--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "mongodb": "^6.3.0",
     "next": "^14.0.3",
     "next-auth": "^5.0.0-beta.4",
     "react": "^18.2.0",
