--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "devDependencies": {
+    "@types/node": "20.11.25",
+    "@types/react": "18.2.64",
+    "typescript": "5.4.2"
   }
 }
